# Deweeder

./: Deweeder_Yolov8.ipynb  README.md
controllers/my_controller/: my_controller.py
deweeder_tertill/: .gitignore  README.md  cmd.yaml  patch.patch
deweeder_tertill/scripts/: hw_smoke.sh  pub_motion.py  safe_motor_ramp.py  test_safety_override.py  watchdog_test.sh
deweeder_tertill/src/weedbot_core/: package.xml  setup.cfg  setup.py
deweeder_tertill/src/weedbot_core/launch/: pinmap_TEMPLATE.yaml  robot_core.launch.py
deweeder_tertill/src/weedbot_core/weedbot_core/: behavior_node.py  hal_hw_gpio.py  hal_node.py  motor_controller.py  robot_state_node.py  safety_node.py
deweeder_tertill/src/weedbot_core/weedbot_core/drivers/: mock_driver.py  serial_driver.py  socketcan_driver.py
deweeder_tertill/src/weedbot_core/weedbot_core/hal/: driver_interface.py
deweeder_tertill/src/weedbot_msgs/: CMakeLists.txt  package.xml
deweeder_tertill/src/weedbot_msgs/msg/: MicroSensorPacket.msg  MotionCmd.msg  ToolCmd.msg
deweeder_tertill/tests/: test_hal_mock.py
deweeder_ws_ros/: start_simulation.sh
deweeder_ws_ros/install/: local_setup.sh  setup.sh
deweeder_ws_ros/install/deweeder_robot/share/deweeder_robot/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
deweeder_ws_ros/install/deweeder_robot/share/deweeder_robot/urdf/: deweeder_robot.urdf
deweeder_ws_ros/install/deweeder_robot/share/deweeder_robot/worlds/: crop_field.world
deweeder_ws_ros/src/deweeder_robot/: setup.py
deweeder_ws_ros/src/deweeder_robot/launch/: deweeder_gazebo.launch.py
deweeder_ws_ros/src/deweeder_robot/urdf/: deweeder_robot.urdf
deweeder_ws_ros/src/deweeder_robot/worlds/: crop_field.world  crop_field_utf8.world
worlds/: Farm of Deweeder.wbt
