<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>weedbot_core</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="rosh@todo.todo">rosh</maintainer>
  <license>TODO: License declaration</license>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>nav_msgs</depend>
  <build_depend>weedbot_msgs</build_depend>
  <exec_depend>weedbot_msgs</exec_depend>

  <build_depend>rosidl_default_runtime</build_depend>
  <exec_depend>rosidl_runtime_py</exec_depend>


  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>
  
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
